# cpp_sanity_template

./: .gitignore  CMakeLists.txt  README.md  tcpp.code-workspace
src/: main.cpp
src/add/: add.cpp  add_test.cc
src/gui/: gui.cpp  gui.h
src/test/: test.cpp
src/utils/: print.h
